# transportsim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ci_locally.sh  dependencies.sh  pre-commit  setup.sh  simulate.sh  test.sh  transportsim_enable
.github/workflows/: unittests.yml
docs/: code_base_structure.md  terminology.md
include/base/: agglomerative_clustering.h  cluster.h  geometric_median.h  kmeans.h  nearest_building_iterator.h  network.h  spatial.h  utilities.h  world_elements.h
include/evaluator/: traffic_evaluator.h
include/network/: graph.h  min_spanning_tree.h  nearest_building_iterator.h  network.h  road_connectivity_graph_builder.h  world_elements.h
include/pathing/: pathfinder.h  pathreconciler.h  roadpathfinder.h  vehiclepathconstructor.h
include/simulator/: algo_debugger.h  frame_data.h  game_simulator.h  imports.h  render_state.h  sfml_helpers.h  simulation_config.h  simulation_state.h  steiner_state.h  structure_drawer.h  visit_spawner.h
include/steiner_tree_solver/: road_candidate_graph.h  spanning_tree_solver.h  steiner_point_search_by_clustering.h  virtual_graph.h
src/base/: agglomerative_clustering.cpp  geometric_median.cpp  geometric_median_test.cpp  kmeans.cpp  kmeans_test.cpp  nearest_building_iterator.cpp  network.cpp  spatial.cpp  utilities.cpp  world_elements.cpp
src/evaluator/: traffic_evaluator.cpp  traffic_evaluator_test.cpp
src/network/: min_spanning_tree.cpp  nearest_building_iterator.cpp  network.cpp  road_connectivity_graph_builder.cpp  road_segment.cpp  road_segment_test.cpp  roadway_test.cpp  world_elements.cpp
src/pathing/: pathfinder.cpp  pathreconciler.cpp  pathreconciler_test.cpp  roadpathfinder.cpp  roadpathfinder_test.cpp  vehiclepathconstructor.cpp
src/simulator/: algo_debugger_main.cpp  game_simulator.cpp  game_simulator_main.cpp  render_state.cpp  sfml_helpers.cpp  simulation_state.cpp  steiner_state.cpp  structure_drawer.cpp  visit_spawner.cpp
src/steiner_tree_solver/: road_candidate_graph.cpp  spanning_tree_solver.cpp  steiner_point_search_by_clustering.cpp
