cmake_minimum_required(VERSION 3.10)
project(TransportSim)

add_compile_options(-std=c++2a)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

function(build_transportsim_lib src_dir_name)
    file(GLOB SRC_CPP_FILES src/${src_dir_name}/*.cpp)
    list(FILTER SRC_CPP_FILES EXCLUDE REGEX ".*_test.cpp$")
    add_library(transportsim_${src_dir_name} SHARED ${SRC_CPP_FILES})
    target_include_directories(transportsim_${src_dir_name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
    install(TARGETS transportsim_${src_dir_name} LIBRARY DESTINATION lib)
endfunction()

set(SUBDIRS base pathing network simulator)
set(TRANSPORTSIM_LIBS "")
foreach(LIBNAME ${SUBDIRS})
    build_transportsim_lib(${LIBNAME})
    list(APPEND TRANSPORTSIM_LIBS transportsim_${LIBNAME})
endforeach()
message(STATUS ${TRANSPORTSIM_LIBS})

function(entrypoint_using_sfml bin_path bin_name)
    add_executable(${bin_name}_bin src/${bin_path}/${bin_name}.cpp)
    set_target_properties(${bin_name}_bin PROPERTIES OUTPUT_NAME ${bin_name})
    target_include_directories(${bin_name}_bin PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
    target_link_libraries(${bin_name}_bin LINK_PUBLIC ${TRANSPORTSIM_LIBS} "sfml-audio;sfml-graphics;sfml-network;sfml-system;sfml-window")
    install(TARGETS ${bin_name}_bin RUNTIME DESTINATION bin)
endfunction()

entrypoint_using_sfml(simulator game_simulator)

foreach(SUBDIR ${SUBDIRS})
    file(GLOB TEST_CPP_FILES src/${SUBDIR}/*_test.cpp)
    foreach(TESTNAME ${TEST_CPP_FILES})
        message(STATUS ${TESTNAME})
        string(REGEX REPLACE "\/([A-Za-z0-9_]+\/)+([A-Za-z0-9_]+).cpp" "\\2" TESTNAME ${TESTNAME})
        message(STATUS ${TESTNAME})
        entrypoint_using_sfml(${SUBDIR} ${TESTNAME})
    endforeach()
endforeach()
